--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ test-results/
 playwright-report/
 playwright/.cache/
 node_modules
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
